Added my project

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img  src="https://i.pinimg.com/564x/59/a4/21/59a421ff34559213cb9782136a498f6f.jpg" alt="">
             </div>
             <span class="content">
-                <h3>Someone famus</h3>
+                <h3>Haru</h3>
                 <h5>UI/UX DESIGNER</h5>
                 <div class="">
                     <button>Hire Me</button>
